crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__bounded_range_multiplier_is_optimized_to_options_with_lifetimes_when_necessary.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo<'a>(
    pub types::BorderTopColorStyleValue<'a>,
    pub Option<types::BorderTopColorStyleValue<'a>>,
);
#[automatically_derived]
impl<'a> ::hdx_parser::Peek<'a> for Foo<'a> {
    fn peek(p: &::hdx_parser::Parser<'a>) -> bool {
        use ::hdx_parser::Peek;
        p.peek::<types::BorderTopColorStyleValue>()
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::hdx_parser::Parser<'a>) -> ::hdx_parser::Result<Self> {
        use ::hdx_parser::Parse;
        let val0 = p.parse::<types::BorderTopColorStyleValue>()?;
        let val1 = p.parse_if_peek::<types::BorderTopColorStyleValue>()?;
        Ok(Self(val0, val1))
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::ToCursors for Foo<'a> {
    fn to_cursors(&self, s: &mut impl ::hdx_parser::CursorSink) {
        ::hdx_parser::ToCursors::to_cursors(&self.0, s);
        if let Some(inner) = &self.1 {
            ::hdx_parser::ToCursors::to_cursors(inner, s);
        }
    }
}
