crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__enum_type_with_lifetime.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo<'a> {
    Color(types::Color),
    Image(types::Image1D<'a>),
}
#[automatically_derived]
impl<'a> ::hdx_parser::Peek<'a> for Foo<'a> {
    fn peek(p: &::hdx_parser::Parser<'a>) -> bool {
        use ::hdx_parser::Peek;
        p.peek::<types::Color>() || p.peek::<types::Image1D>()
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::hdx_parser::Parser<'a>) -> ::hdx_parser::Result<Self> {
        use ::hdx_parser::Parse;
        if p.peek::<types::Color>() {
            let val = p.parse::<types::Color>()?;
            return Ok(Self::Color(val));
        }
        if p.peek::<types::Image1D>() {
            let val = p.parse::<types::Image1D>()?;
            return Ok(Self::Image(val));
        }
        let c: ::hdx_lexer::Cursor = p.parse::<::hdx_parser::T![Any]>()?.into();
        Err(::hdx_parser::diagnostics::Unexpected(c.into(), c.into()))?
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::ToCursors for Foo<'a> {
    fn to_cursors(&self, s: &mut impl ::hdx_parser::CursorSink) {
        match self {
            Self::Color(inner) => {
                ::hdx_parser::ToCursors::to_cursors(inner, s);
            }
            Self::Image(inner) => {
                ::hdx_parser::ToCursors::to_cursors(inner, s);
            }
        }
    }
}
